using min max one simple filter opration

--- a/Working_With_Date_and_Time_Series.ipynb
+++ b/Working_With_Date_and_Time_Series.ipynb
@@ -70,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option(\"display.max_columns\",7)"
+    "pd.set_option(\"display.max_columns\",8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -110,73 +110,86 @@
        "      <th>Low</th>\n",
        "      <th>Close</th>\n",
        "      <th>Volume</th>\n",
+       "      <th>DayOfTheWeek</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2020-03-13 08-PM</td>\n",
+       "      <td>2020-03-13 20:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>129.94</td>\n",
        "      <td>131.82</td>\n",
        "      <td>126.87</td>\n",
        "      <td>128.71</td>\n",
        "      <td>1940673.93</td>\n",
+       "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2020-03-13 07-PM</td>\n",
+       "      <td>2020-03-13 19:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>119.51</td>\n",
        "      <td>132.02</td>\n",
        "      <td>117.10</td>\n",
        "      <td>129.94</td>\n",
        "      <td>7579741.09</td>\n",
+       "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2020-03-13 06-PM</td>\n",
+       "      <td>2020-03-13 18:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>124.47</td>\n",
        "      <td>124.85</td>\n",
        "      <td>115.50</td>\n",
        "      <td>119.51</td>\n",
        "      <td>4898735.81</td>\n",
+       "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2020-03-13 05-PM</td>\n",
+       "      <td>2020-03-13 17:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>124.08</td>\n",
        "      <td>127.42</td>\n",
        "      <td>121.63</td>\n",
        "      <td>124.47</td>\n",
        "      <td>2753450.92</td>\n",
+       "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2020-03-13 04-PM</td>\n",
+       "      <td>2020-03-13 16:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>124.85</td>\n",
        "      <td>129.51</td>\n",
        "      <td>120.17</td>\n",
        "      <td>124.08</td>\n",
        "      <td>4461424.71</td>\n",
+       "      <td>Friday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Date  Symbol    Open    High     Low   Close      Volume\n",
-       "0  2020-03-13 08-PM  ETHUSD  129.94  131.82  126.87  128.71  1940673.93\n",
-       "1  2020-03-13 07-PM  ETHUSD  119.51  132.02  117.10  129.94  7579741.09\n",
-       "2  2020-03-13 06-PM  ETHUSD  124.47  124.85  115.50  119.51  4898735.81\n",
-       "3  2020-03-13 05-PM  ETHUSD  124.08  127.42  121.63  124.47  2753450.92\n",
-       "4  2020-03-13 04-PM  ETHUSD  124.85  129.51  120.17  124.08  4461424.71"
+       "                 Date  Symbol    Open    High     Low   Close      Volume  \\\n",
+       "0 2020-03-13 20:00:00  ETHUSD  129.94  131.82  126.87  128.71  1940673.93   \n",
+       "1 2020-03-13 19:00:00  ETHUSD  119.51  132.02  117.10  129.94  7579741.09   \n",
+       "2 2020-03-13 18:00:00  ETHUSD  124.47  124.85  115.50  119.51  4898735.81   \n",
+       "3 2020-03-13 17:00:00  ETHUSD  124.08  127.42  121.63  124.47  2753450.92   \n",
+       "4 2020-03-13 16:00:00  ETHUSD  124.85  129.51  120.17  124.08  4461424.71   \n",
+       "\n",
+       "  DayOfTheWeek  \n",
+       "0       Friday  \n",
+       "1       Friday  \n",
+       "2       Friday  \n",
+       "3       Friday  \n",
+       "4       Friday  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +347,8 @@
        "      <th>Date</th>\n",
        "      <th>Symbol</th>\n",
        "      <th>Open</th>\n",
-       "      <th>...</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
        "      <th>Close</th>\n",
        "      <th>Volume</th>\n",
        "      <th>DayOfTheWeek</th>\n",
@@ -346,7 +360,8 @@
        "      <td>2020-03-13 20:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>129.94</td>\n",
-       "      <td>...</td>\n",
+       "      <td>131.82</td>\n",
+       "      <td>126.87</td>\n",
        "      <td>128.71</td>\n",
        "      <td>1940673.93</td>\n",
        "      <td>Friday</td>\n",
@@ -356,7 +371,8 @@
        "      <td>2020-03-13 19:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>119.51</td>\n",
-       "      <td>...</td>\n",
+       "      <td>132.02</td>\n",
+       "      <td>117.10</td>\n",
        "      <td>129.94</td>\n",
        "      <td>7579741.09</td>\n",
        "      <td>Friday</td>\n",
@@ -366,7 +382,8 @@
        "      <td>2020-03-13 18:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>124.47</td>\n",
-       "      <td>...</td>\n",
+       "      <td>124.85</td>\n",
+       "      <td>115.50</td>\n",
        "      <td>119.51</td>\n",
        "      <td>4898735.81</td>\n",
        "      <td>Friday</td>\n",
@@ -376,7 +393,8 @@
        "      <td>2020-03-13 17:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>124.08</td>\n",
-       "      <td>...</td>\n",
+       "      <td>127.42</td>\n",
+       "      <td>121.63</td>\n",
        "      <td>124.47</td>\n",
        "      <td>2753450.92</td>\n",
        "      <td>Friday</td>\n",
@@ -386,7 +404,8 @@
        "      <td>2020-03-13 16:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>124.85</td>\n",
-       "      <td>...</td>\n",
+       "      <td>129.51</td>\n",
+       "      <td>120.17</td>\n",
        "      <td>124.08</td>\n",
        "      <td>4461424.71</td>\n",
        "      <td>Friday</td>\n",
@@ -400,13 +419,15 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23669</th>\n",
        "      <td>2017-07-01 15:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>265.74</td>\n",
-       "      <td>...</td>\n",
+       "      <td>272.74</td>\n",
+       "      <td>265.00</td>\n",
        "      <td>272.57</td>\n",
        "      <td>1500282.55</td>\n",
        "      <td>Saturday</td>\n",
@@ -416,7 +437,8 @@
        "      <td>2017-07-01 14:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>268.79</td>\n",
-       "      <td>...</td>\n",
+       "      <td>269.90</td>\n",
+       "      <td>265.00</td>\n",
        "      <td>265.74</td>\n",
        "      <td>1702536.85</td>\n",
        "      <td>Saturday</td>\n",
@@ -426,7 +448,8 @@
        "      <td>2017-07-01 13:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>274.83</td>\n",
-       "      <td>...</td>\n",
+       "      <td>274.93</td>\n",
+       "      <td>265.00</td>\n",
        "      <td>268.79</td>\n",
        "      <td>3010787.99</td>\n",
        "      <td>Saturday</td>\n",
@@ -436,7 +459,8 @@
        "      <td>2017-07-01 12:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>275.01</td>\n",
-       "      <td>...</td>\n",
+       "      <td>275.01</td>\n",
+       "      <td>271.00</td>\n",
        "      <td>274.83</td>\n",
        "      <td>824362.87</td>\n",
        "      <td>Saturday</td>\n",
@@ -446,7 +470,8 @@
        "      <td>2017-07-01 11:00:00</td>\n",
        "      <td>ETHUSD</td>\n",
        "      <td>279.98</td>\n",
-       "      <td>...</td>\n",
+       "      <td>279.99</td>\n",
+       "      <td>272.10</td>\n",
        "      <td>275.01</td>\n",
        "      <td>679358.87</td>\n",
        "      <td>Saturday</td>\n",
@@ -457,36 +482,36 @@
        "</div>"
       ],
       "text/plain": [
-       "                     Date  Symbol    Open  ...   Close      Volume  \\\n",
-       "0     2020-03-13 20:00:00  ETHUSD  129.94  ...  128.71  1940673.93   \n",
-       "1     2020-03-13 19:00:00  ETHUSD  119.51  ...  129.94  7579741.09   \n",
-       "2     2020-03-13 18:00:00  ETHUSD  124.47  ...  119.51  4898735.81   \n",
-       "3     2020-03-13 17:00:00  ETHUSD  124.08  ...  124.47  2753450.92   \n",
-       "4     2020-03-13 16:00:00  ETHUSD  124.85  ...  124.08  4461424.71   \n",
-       "...                   ...     ...     ...  ...     ...         ...   \n",
-       "23669 2017-07-01 15:00:00  ETHUSD  265.74  ...  272.57  1500282.55   \n",
-       "23670 2017-07-01 14:00:00  ETHUSD  268.79  ...  265.74  1702536.85   \n",
-       "23671 2017-07-01 13:00:00  ETHUSD  274.83  ...  268.79  3010787.99   \n",
-       "23672 2017-07-01 12:00:00  ETHUSD  275.01  ...  274.83   824362.87   \n",
-       "23673 2017-07-01 11:00:00  ETHUSD  279.98  ...  275.01   679358.87   \n",
+       "                     Date  Symbol    Open    High     Low   Close      Volume  \\\n",
+       "0     2020-03-13 20:00:00  ETHUSD  129.94  131.82  126.87  128.71  1940673.93   \n",
+       "1     2020-03-13 19:00:00  ETHUSD  119.51  132.02  117.10  129.94  7579741.09   \n",
+       "2     2020-03-13 18:00:00  ETHUSD  124.47  124.85  115.50  119.51  4898735.81   \n",
+       "3     2020-03-13 17:00:00  ETHUSD  124.08  127.42  121.63  124.47  2753450.92   \n",
+       "4     2020-03-13 16:00:00  ETHUSD  124.85  129.51  120.17  124.08  4461424.71   \n",
+       "...                   ...     ...     ...     ...     ...     ...         ...   \n",
+       "23669 2017-07-01 15:00:00  ETHUSD  265.74  272.74  265.00  272.57  1500282.55   \n",
+       "23670 2017-07-01 14:00:00  ETHUSD  268.79  269.90  265.00  265.74  1702536.85   \n",
+       "23671 2017-07-01 13:00:00  ETHUSD  274.83  274.93  265.00  268.79  3010787.99   \n",
+       "23672 2017-07-01 12:00:00  ETHUSD  275.01  275.01  271.00  274.83   824362.87   \n",
+       "23673 2017-07-01 11:00:00  ETHUSD  279.98  279.99  272.10  275.01   679358.87   \n",
        "\n",
-       "       DayOfTheWeek  \n",
-       "0            Friday  \n",
-       "1            Friday  \n",
-       "2            Friday  \n",
-       "3            Friday  \n",
-       "4            Friday  \n",
-       "...             ...  \n",
-       "23669      Saturday  \n",
-       "23670      Saturday  \n",
-       "23671      Saturday  \n",
-       "23672      Saturday  \n",
-       "23673      Saturday  \n",
+       "      DayOfTheWeek  \n",
+       "0           Friday  \n",
+       "1           Friday  \n",
+       "2           Friday  \n",
+       "3           Friday  \n",
+       "4           Friday  \n",
+       "...            ...  \n",
+       "23669     Saturday  \n",
+       "23670     Saturday  \n",
+       "23671     Saturday  \n",
+       "23672     Saturday  \n",
+       "23673     Saturday  \n",
        "\n",
        "[23674 rows x 8 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,12 +522,253 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2017-07-01 11:00:00')"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Date'].min() # The Oldest data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2020-03-13 20:00:00')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Date'].max() # The Newest data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>DayOfTheWeek</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-03-13 20:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>129.94</td>\n",
+       "      <td>131.82</td>\n",
+       "      <td>126.87</td>\n",
+       "      <td>128.71</td>\n",
+       "      <td>1940673.93</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-03-13 19:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>119.51</td>\n",
+       "      <td>132.02</td>\n",
+       "      <td>117.10</td>\n",
+       "      <td>129.94</td>\n",
+       "      <td>7579741.09</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-13 18:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.47</td>\n",
+       "      <td>124.85</td>\n",
+       "      <td>115.50</td>\n",
+       "      <td>119.51</td>\n",
+       "      <td>4898735.81</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-03-13 17:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.08</td>\n",
+       "      <td>127.42</td>\n",
+       "      <td>121.63</td>\n",
+       "      <td>124.47</td>\n",
+       "      <td>2753450.92</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-03-13 16:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.85</td>\n",
+       "      <td>129.51</td>\n",
+       "      <td>120.17</td>\n",
+       "      <td>124.08</td>\n",
+       "      <td>4461424.71</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1744</th>\n",
+       "      <td>2020-01-01 04:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>129.57</td>\n",
+       "      <td>130.00</td>\n",
+       "      <td>129.50</td>\n",
+       "      <td>129.56</td>\n",
+       "      <td>702786.82</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1745</th>\n",
+       "      <td>2020-01-01 03:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>130.37</td>\n",
+       "      <td>130.44</td>\n",
+       "      <td>129.38</td>\n",
+       "      <td>129.57</td>\n",
+       "      <td>496704.23</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1746</th>\n",
+       "      <td>2020-01-01 02:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>130.14</td>\n",
+       "      <td>130.50</td>\n",
+       "      <td>129.91</td>\n",
+       "      <td>130.37</td>\n",
+       "      <td>396315.72</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1747</th>\n",
+       "      <td>2020-01-01 01:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>128.34</td>\n",
+       "      <td>130.14</td>\n",
+       "      <td>128.32</td>\n",
+       "      <td>130.14</td>\n",
+       "      <td>635419.40</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1748</th>\n",
+       "      <td>2020-01-01 00:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>128.54</td>\n",
+       "      <td>128.54</td>\n",
+       "      <td>128.12</td>\n",
+       "      <td>128.34</td>\n",
+       "      <td>245119.91</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1749 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Date  Symbol    Open    High     Low   Close      Volume  \\\n",
+       "0    2020-03-13 20:00:00  ETHUSD  129.94  131.82  126.87  128.71  1940673.93   \n",
+       "1    2020-03-13 19:00:00  ETHUSD  119.51  132.02  117.10  129.94  7579741.09   \n",
+       "2    2020-03-13 18:00:00  ETHUSD  124.47  124.85  115.50  119.51  4898735.81   \n",
+       "3    2020-03-13 17:00:00  ETHUSD  124.08  127.42  121.63  124.47  2753450.92   \n",
+       "4    2020-03-13 16:00:00  ETHUSD  124.85  129.51  120.17  124.08  4461424.71   \n",
+       "...                  ...     ...     ...     ...     ...     ...         ...   \n",
+       "1744 2020-01-01 04:00:00  ETHUSD  129.57  130.00  129.50  129.56   702786.82   \n",
+       "1745 2020-01-01 03:00:00  ETHUSD  130.37  130.44  129.38  129.57   496704.23   \n",
+       "1746 2020-01-01 02:00:00  ETHUSD  130.14  130.50  129.91  130.37   396315.72   \n",
+       "1747 2020-01-01 01:00:00  ETHUSD  128.34  130.14  128.32  130.14   635419.40   \n",
+       "1748 2020-01-01 00:00:00  ETHUSD  128.54  128.54  128.12  128.34   245119.91   \n",
+       "\n",
+       "     DayOfTheWeek  \n",
+       "0          Friday  \n",
+       "1          Friday  \n",
+       "2          Friday  \n",
+       "3          Friday  \n",
+       "4          Friday  \n",
+       "...           ...  \n",
+       "1744    Wednesday  \n",
+       "1745    Wednesday  \n",
+       "1746    Wednesday  \n",
+       "1747    Wednesday  \n",
+       "1748    Wednesday  \n",
+       "\n",
+       "[1749 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filt = (df['Date']>='2020')\n",
+    "df[filt]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "|"
-   ]
+   "source": []
   }
  ],
  "metadata": {
