Read data to sql

--- a/Reading_Writting_Data_Diff_Sourses.ipynb
+++ b/Reading_Writting_Data_Diff_Sourses.ipynb
@@ -2612,7 +2612,9 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -4353,10 +4355,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "canada.to_sql('canada_scack_data',can,if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql_df = pd.read_sql('canada_scack_data',can,index_col='Respondent')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sq"
+   ]
   }
  ],
  "metadata": {
