export data from json URL

--- a/Reading_Writting_Data_Diff_Sourses.ipynb
+++ b/Reading_Writting_Data_Diff_Sourses.ipynb
@@ -8063,7 +8063,9 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -8928,7 +8930,9 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -9014,6 +9018,15 @@
    ],
    "source": [
     "posts_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "posts_df.to_json('post.json',orient='records',lines=True)"
    ]
   },
   {
