python user contry wise

--- a/Reading_Writting_Data_Diff_Sourses.ipynb
+++ b/Reading_Writting_Data_Diff_Sourses.ipynb
@@ -9022,11 +9022,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "posts_df.to_json('post.json',orient='records',lines=True)"
+    "posts_df.to_json('data/post.json',orient='records',lines=True)"
    ]
   },
   {
